--- a/Kondate/Kondate.csproj
+++ b/Kondate/Kondate.csproj
@@ -99,6 +99,9 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\AccountModels.cs" />
+    <Compile Include="Models\KondateContext.cs" />
+    <Compile Include="Models\Meal.cs" />
+    <Compile Include="Models\Menu.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
