add connection string

--- a/Kondate/Web.config
+++ b/Kondate/Web.config
@@ -5,6 +5,9 @@
   -->
 <configuration>
   <connectionStrings>
+    <add name="KondateContext"
+         connectionString="Data Source=|DataDirectory|Kondate.sdf"
+         providerName="System.Data.SqlServerCe.4.0"/>
     <add name="DefaultConnection" connectionString="Data Source=.\SQLEXPRESS;AttachDbFilename=|DataDirectory|\aspnet.mdf;Integrated Security=True;User Instance=True;MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
